[package]
name = "bot1"
version = "0.7.2"
authors = ["u296 <u296b3g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


tokio={version = "*", features = ["fs", "macros", "rt-multi-thread"]}
tokio-stream = {version = "*", features = ["io-util"]}
futures="*"
md5 = "*"
async-process = "*"
strip-ansi-escapes = "*"
songbird = {version = "*", features = ["builtin-queue"]}
serde = "*"
serde_json = "*"
rand = "*"
tracing = "*"
tracing-subscriber = {version = "*", features = ["fmt"]}
uuid = "*"
regex = "*"
lazy_static = "*"


[dependencies.serenity]
version = "*"
default-features = true
features = [
    "framework",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "utils",
    "voice"
]