[package]
name = "bot1"
version = "0.8.0"
authors = ["u296 <u296b3g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


tokio={version = "*", features = ["fs", "macros", "rt-multi-thread"]}
tokio-stream = {version = "*", features = ["io-util"]}
futures="*"
async-process = "*"
strip-ansi-escapes = "*"
songbird = {version = "*", features = ["builtin-queue"]}
serde = "*"
serde_json = "*"
rand = "*"
tracing = "*"
tracing-subscriber = {version = "*", features = ["fmt"]}
uuid = "*"
regex = "*"
lazy_static = "*"
wolframalpha_api = "*"


[dependencies.serenity]
version = "0.10.10"
default-features = true
features = [
    "framework",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "utils",
    "voice"
]